# Steem

./: .gitignore  .gitmodules  .project_alt.json  CMakeLists.txt  README.md  compile.sh
.cache/clangd/index/: Window.cpp.7C21D4D5819E6160.idx  Window.hpp.88B443091C213125.idx  assert.hpp.F9989B4F14132C72.idx  context.c.F3A2A1F133747C11.idx  egl_context.c.CF1B76EBFA799849.idx  egl_context.h.4CED41B5A1478582.idx  glfw3.h.B2148E7BD6A2BA7A.idx  glx_context.c.D724A14F1F2EBE53.idx  glx_context.h.A90C178AA900DF7D.idx  init.c.AA4AFEC1D37F9D4C.idx  input.c.36A8364635784EE1.idx  internal.h.D0E9D3361D2A208E.idx  linux_joystick.c.DA266AF466CCE36A.idx  linux_joystick.h.02AC90AC60786A25.idx  mappings.h.278C96270D62D9F7.idx  monitor.c.3C1091D006F6558D.idx  osmesa_context.c.88400999EA08AAB6.idx  osmesa_context.h.D8771C26D190E5B4.idx  posix_thread.c.6E71816A4808CE90.idx  posix_thread.h.1EB874CEA6653FC9.idx  posix_time.c.B2F5D80B1582BB61.idx  posix_time.h.95FC376E76A86595.idx  vulkan.c.B06CBA9A019CA0E0.idx  window.c.D3D900C51900B5D7.idx  window_test.cpp.C2BD2CF50342D794.idx  x11_init.c.9AC9A011AB4A61DB.idx  x11_monitor.c.05DCF9E9B18A0789.idx  x11_platform.h.A86C4DE9C03D087B.idx  x11_window.c.E5BAF7C08C474473.idx  xkb_unicode.c.C8573990F07A86EA.idx  xkb_unicode.h.AF563333A719A6B5.idx
STEEM/src/tests/: CMakeLists.txt  library_c.c  library_test.cpp  vktut.cpp  window_test.cpp
res/shaders/: example.frag  example.vert
